Complete till change password

--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -5,6 +5,35 @@
     "intro_message_two": "Just turn on your location and you will find the nearest pet care you wish.",
     "intro_header_three": "Find petcare around your location",
     "intro_message_three": "Just turn on your location and you will find the nearest pet care you wish.",
+    "skip": "Skip",
     "welcome_back": "Welcome Back!",
-    "login_with_details": "Please log in with your details"
+    "login_with_details": "Please log in with your details",
+    "lbl_email": "Email Id",
+    "hint_email": "Enter email address",
+    "lbl_password": "Password",
+    "hint_password": "Enter password",
+    "remember_me": "Remember me",
+    "forgot_password": "Forgot Password",
+    "btn_login": "Login",
+    "btn_send": "Send",
+    "btn_verify": "Verify Now",
+    "no_account": "Don't have an account?",
+    "sign_up": "Signup",
+    "forgot_password_text": "We will send mail to the email address you registered to regain you password",
+    "otp_verification": "OTP Verification",
+    "auth_code_sent": "An authentication code has been sent to",
+    "no_code_receive": "I didn't receive code.",
+    "btn_resend": "Resend code",
+    "time_left": "{0} Sec left",
+    "reset_link_sent": "Password reset email sent",
+    "reset_link_message": "An email has been sent to you follow direction in the email to reset password",
+    "btn_okay": "Ok",
+    "screen_change_password": "Change Password",
+    "lbl_old_password": "Old password",
+    "hint_old_password": "Enter old password",
+    "lbl_new_password": "New password",
+    "hint_new_password": "Enter new password",
+    "lbl_confirm_password": "Confirm password",
+    "hint_confirm_password": "Enter confirm password",
+    "btn_submit":"Submit"
 }
