--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -4,5 +4,23 @@
     "intro_header_two": "Find petcare around your location",
     "intro_message_two": "Just turn on your location and you will find the nearest pet care you wish.",
     "intro_header_three": "Find petcare around your location",
-    "intro_message_three": "Just turn on your location and you will find the nearest pet care you wish."
+    "intro_message_three": "Just turn on your location and you will find the nearest pet care you wish.",
+    "skip": "Skip",
+    "welcome_back": "Welcome Back!",
+    "login_with_details": "Please log in with your details",
+    "lbl_email": "Email Id",
+    "hint_email": "Enter email address",
+    "lbl_password": "Password",
+    "hint_password": "Enter password",
+    "remember_me": "Remember me",
+    "forgot_password": "Forgot Password",
+    "btn_login": "Login",
+    "btn_send": "Send",
+    "no_account": "Don't have an account?",
+    "sign_up": "Signup",
+    "forgot_password_text": "We will send mail to the email address you registered to regain you password",
+    "otp_verification": "OTP Verification",
+    "auth_code_sent": "An authentication code has been sent to",
+    "no_code_receive": "I didn't receive code.",
+    "btn_resend": "Resend code"
 }
