Complete design for auth module

--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -35,5 +35,31 @@
     "hint_new_password": "Enter new password",
     "lbl_confirm_password": "Confirm password",
     "hint_confirm_password": "Enter confirm password",
-    "btn_submit":"Submit"
+    "btn_submit": "Submit",
+    "create_account": "Create New Account",
+    "create_account_message": "Enter your information below and get started.",
+    "type_parent": "Pet Parents",
+    "type_vet": "Vet",
+    "lbl_parent_name": "Pet Parent Name",
+    "hint_first_name": "Enter First Name",
+    "hint_last_name": "Enter Last Name",
+    "lbl_parent_phone": "Pet Parent Number",
+    "hint_phone": "Enter number",
+    "lbl_gender": "Gender",
+    "hint_gender": "Select Gender",
+    "lbl_age": "Age",
+    "hint_age": "Enter Age",
+    "home_address": "Home Address",
+    "hint_street_address": "Street Address",
+    "hint_street_address_two": "Street Address Line 2",
+    "lbl_city": "City",
+    "hint_city": "Enter City",
+    "lbl_province": "State/Province",
+    "hint_province": "Enter State/Province",
+    "lbl_secondary_phone": "Secondary Contact Phone Number",
+    "lbl_display_name": "Display Name",
+    "hint_display_name": "Enter Display Name",
+    "lbl_mailing_address": "Mailing Address",
+    "hint_mailing_address": "Enter Mailing Address",
+    "already_account": "Already have an account?"
 }
