Work on profile page

--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -65,7 +65,58 @@
     "tab_home": "Home",
     "tab_profile": "Profile",
     "tab_appointment": "Appointment",
-    "tab_pets": "Pets",
+    "tab_pets": "My Pets",
     "location": "Location",
-    "opening_time": "Opening Time"
+    "opening_time": "Opening Time",
+    "btn_add_pet": "Add Pet",
+    "screen_pet_details": "Pet Details",
+    "pet_other_details": "Pet Other Details",
+    "chip_number": "Microchip Number: ",
+    "spayed": "is Neutered/Spayed: ",
+    "pedigree_front": "Pedigree Info Frontside: ",
+    "pedigree_back": "Pedigree Info Backside: ",
+    "allergies": "Allergies: ",
+    "description": "Description: ",
+    "pet_menu": "PET MENU",
+    "medical_history": "Medical history",
+    "feeding_schedule": "Set Feeding Schedule",
+    "diet": "Manage Pet’s Diet Log",
+    "nutrition": "Nutrition & Feeding details",
+    "medication": "Medication details",
+    "vaccination": "Vaccination details",
+    "special_needs": "Special Need",
+    "lbl_pet_name": "Pet Name",
+    "hint_pet_name": "Enter Pet Name",
+    "lbl_breed": "Breed",
+    "hint_breed": "Select Breed",
+    "lbl_marking": "Color\\Marking",
+    "hint_marking": "Enter body color",
+    "lbl_birth_date": "Birth Date",
+    "hint_birth_date": "Select birth date",
+    "lbl_weight": "Weight in Kg",
+    "hint_weight": "Enter Weight",
+    "lbl_height": "Height",
+    "hint_height": "Enter Height",
+    "lbl_chip_no": "Microchip Number",
+    "hint_chip_no": "Enter Microchip Number",
+    "lbl_spayed": "Is Neutered/Spayed",
+    "hint_spayed": "Select Neutered/Spayed",
+    "lbl_pedigree_front": "Pedigree Info Frontside",
+    "hint_pedigree_front": "Enter Pedigree Info Frontside",
+    "lbl_pedigree_back": "Pedigree Info Backside",
+    "hint_pedigree_back": "Pedigree Info Backside",
+    "lbl_allergies": "Allergies",
+    "hint_allergies": "Enter Allergies",
+    "pet_taker_address": "Pet Care Taker Address (If different)",
+    "lbl_description": "Description",
+    "hint_description": "Enter description",
+    "lbl_qr_code": "QR Code",
+    "hint_qr_code": "Scan QR Code",
+    "account": "Account",
+    "screen_notifications": "Notifications",
+    "screen_privacy_policy": "Privacy Policy",
+    "screen_terms": "Terms & Conditions",
+    "screen_contact_us": "Contact Us",
+    "screen_faq": "FAQ",
+    "help": "Help"
 }
