pet medication complete

--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -122,5 +122,34 @@
     "btn_delete_account": "Delete Account",
     "btn_logout": "Logout",
     "screen_edit_profile": "Edit Profile",
-    "btn_save": "Save"
+    "btn_save": "Save",
+    "pet_medication": "Pet Medication",
+    "btn_add_medication": "Add Pet Medication Details",
+    "date_nutrition": "Date & Duration",
+    "prescription_reason": "Reason for Prescription",
+    "administrative_info": "Administration Instructions",
+    "special_notes": "Special Notes",
+    "lbl_medication_name": "Medication Name",
+    "hint_medication_name": "Enter Medication Name",
+    "lbl_medication_type": "Medication Type",
+    "hint_medication_type": "Select Medication Type",
+    "lbl_veterinarian": "Prescribing Veterinarian",
+    "hint_veterinarian": "Enter Prescribing Veterinarian name",
+    "lbl_species": "Pet's Species",
+    "hint_species": "Enter Pet's Species",
+    "lbl_dosage": "Dosage",
+    "hint_dosage": "Enter Dosage",
+    "lbl_frequency": "Frequency",
+    "hint_frequency": "Enter Frequency",
+    "lbl_duration": "Duration",
+    "hint_duration": "Enter Duration",
+    "hint_prescription_reason": "Enter Reason for Prescription",
+    "hint_administrative_info": "Enter Administration Instructions",
+    "lbl_start_date": "Start Date",
+    "hint_select_date": "Select Date",
+    "lbl_end_date": "End Date",
+    "lbl_refills": "Refills",
+    "hint_refills": "Enter Refills",
+    "hint_special_note": "Enter Special Notes",
+    "screen_add_medication": "Add Pet Medication"
 }
