Work on appointment listing

--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -71,12 +71,12 @@
     "btn_add_pet": "Add Pet",
     "screen_pet_details": "Pet Details",
     "pet_other_details": "Pet Other Details",
-    "chip_number": "Microchip Number: ",
-    "spayed": "is Neutered/Spayed: ",
-    "pedigree_front": "Pedigree Info Frontside: ",
-    "pedigree_back": "Pedigree Info Backside: ",
-    "allergies": "Allergies: ",
-    "description": "Description: ",
+    "chip_number": "Microchip Number",
+    "spayed": "is Neutered/Spayed",
+    "pedigree_front": "Pedigree Info Frontside",
+    "pedigree_back": "Pedigree Info Backside",
+    "allergies": "Allergies",
+    "description": "Description",
     "pet_menu": "PET MENU",
     "medical_history": "Medical history",
     "feeding_schedule": "Set Feeding Schedule",
@@ -112,7 +112,7 @@
     "hint_description": "Enter description",
     "lbl_qr_code": "QR Code",
     "hint_qr_code": "Scan QR Code",
-    "account": "Profile",
+    "account": "Account",
     "screen_notifications": "Notifications",
     "screen_privacy_policy": "Privacy Policy",
     "screen_terms": "Terms & Conditions",
@@ -152,13 +152,14 @@
     "hint_refills": "Enter Refills",
     "hint_special_note": "Enter Special Notes",
     "screen_add_medication": "Add Pet Medication",
-    "food_type": "Food Type:",
-    "portion_size": "Portion Size:",
-    "special_instruction": "Special Instructions:",
-    "weight": "Weight:",
+    "food_type": "Food Type",
+    "portion_size": "Portion Size",
+    "special_instruction": "Special Instructions",
+    "weight": "Weight",
     "lbl_food_type": "Food Type",
-    "hint_food_type": "Enter Food Name",
+    "hint_food_type": "Select Food Type",
     "date": "Date",
+    "time": "Time",
     "lbl_meal_time": "Meal Time",
     "hint_meal_time": "Select Meal Time",
     "lbl_portion_size": "Portion Size",
@@ -172,6 +173,68 @@
     "screen_diet_log_details": "Pet Diet Log Details",
     "screen_add_diet_log": "Add Pet Diet Log",
     "nutrition_feeding": "Pet Nutrition & Feeding",
+    "screen_nutrition_details": "Nutrition Details",
     "screen_nutrition_feeding": "Add Pet Nutrition & Feeding",
-    "per_pound": "Per Pound"
+    "per_pound": "Per Pound",
+    "ingredients": "Ingredients",
+    "other_nutrition_detail": "Nutrition & Feeding Other Details",
+    "nutrition_content": "Nutritional Content (per 100g)",
+    "protein": "Protein",
+    "fat": "Fat",
+    "carbohydrates": "Carbohydrates",
+    "fiber": "Fiber",
+    "calories": "Calories",
+    "vitamins": "Vitamins",
+    "minerals": "Minerals",
+    "omega_three": "Omega-3 Fatty Acids",
+    "omega_six": "Omega-6 Fatty Acids",
+    "guidelines": "Feeding Guidelines",
+    "small_breed": "Small Breed Puppy (1-10 lbs)",
+    "large_breed": "Large Breed Puppy (50+ lbs)",
+    "special_feature": "Special Features",
+    "edit_details": "Edit Details",
+    "lbl_food_name": "Food Name",
+    "hint_food_name": "Enter Food Name",
+    "lbl_brand": "Brand",
+    "hint_brand": "Enter Brand Name",
+    "lbl_life_stage": "Life Stage",
+    "hint_life_stage": "Enter Life Stage",
+    "hint_ingredients": "Enter Ingredients",
+    "lbl_nutrition_content": "Nutritional Content",
+    "hint_nutrition_content": "Enter Content",
+    "per_gram": "Per {0}g",
+    "hint_protein": "Enter Protein",
+    "hint_fat": "Enter Fat",
+    "hint_carbohydrates": "Enter Carbohydrates",
+    "hint_fiber": "Enter Fiber",
+    "hint_calories": "Enter Calories",
+    "hint_vitamins": "Enter Vitamins",
+    "hint_mineral": "Enter Minerals",
+    "hint_omega_three": "Enter Omega-3",
+    "hint_omega_six": "Enter Omega-6",
+    "hint_guideline": "Enter Guidelines",
+    "hint_lbs": "Enter Lbs",
+    "hint_feature": "Enter Special Features",
+    "lbl_price": "Price",
+    "hint_price": "Enter Price",
+    "screen_add_feed_schedule": "Add Feeding Schedule",
+    "lbl_title": "Title",
+    "hint_title": "Enter title",
+    "lbl_note": "Note",
+    "hint_note": "Enter Note",
+    "type_single": "One Day",
+    "type_multiple": "Custom",
+    "repeat": "Repeat",
+    "btn_cancel": "Cancel",
+    "btn_no_repeat": "Do not repeat any more",
+    "btn_off_tomorrow": "Turn off for tomorrow",
+    "screen_feeding_schedule": "Feeding Schedule",
+    "screen_booking_history": "Booking History",
+    "screen_appointment_detail": "Appointment Details",
+    "screen_appointment_booking": "Appointment Booking",
+    "disease": "Disease",
+    "btn_reschedule_appointment": "Reschedule Appointment",
+    "lbl_doctor_name": "Doctor Name",
+    "hint_doctor_name": "Select Doctor Name",
+    "btn_reschedule": "Reschedule"
 }
