Complete design for parent

--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -64,7 +64,7 @@
     "already_account": "Already have an account?",
     "tab_home": "Home",
     "tab_profile": "Profile",
-    "tab_appointment": "Appointment",
+    "tab_appointment": "Calendar",
     "tab_pets": "My Pets",
     "location": "Location",
     "opening_time": "Opening Time",
@@ -111,7 +111,7 @@
     "lbl_description": "Description",
     "hint_description": "Enter description",
     "lbl_qr_code": "QR Code",
-    "hint_qr_code": "Scan QR Code",
+    "hint_qr_code": "Enter QR Code",
     "account": "Account",
     "screen_notifications": "Notifications",
     "screen_privacy_policy": "Privacy Policy",
@@ -241,5 +241,17 @@
     "btn_book_now": "Book Now",
     "lbl_dog_name": "Dog Name",
     "hint_dog_name": "Select Dog Name",
-    "btn_confirm_booking": "Confirm Booking"
+    "btn_confirm_booking": "Confirm Booking",
+    "mark_read": "Mark all as read",
+    "lbl_name": "Name",
+    "hint_name": "Enter Name",
+    "lbl_message": "Message",
+    "hint_message": "Enter Message",
+    "lbl_phone_number": "Phone Number",
+    "message_logout": "Are you sure you want to logout ?",
+    "account_deletion": "Account deletion",
+    "account_deletion_message": "Are You sure you want to delete?",
+    "btn_delete": "Delete",
+    "screen_details": "Details",
+    "screen_detail_page": "Detail page"
 }
