Work on detail page

--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -79,10 +79,10 @@
     "description": "Description",
     "pet_menu": "PET MENU",
     "medical_history": "Medical history",
-    "feeding_schedule": "Set Feeding Schedule",
+    "set_feeding_schedule": "Set Feeding Schedule",
     "diet": "Manage Pet’s Diet Log",
     "nutrition": "Nutrition & Feeding details",
-    "medication": "Medication details",
+    "medication_details": "Medication details",
     "vaccination": "Vaccination details",
     "special_needs": "Special Need",
     "lbl_pet_name": "Pet Name",
@@ -259,5 +259,52 @@
     "tab_current": "Current",
     "tab_upcoming": "Upcoming",
     "tab_past": "Past",
-    "tab_cancelled": "Cancelled"
+    "tab_cancelled": "Cancelled",
+    "date_time": "Date & TIme",
+    "btn_reject": "Reject",
+    "btn_accept": "Accept",
+    "medical_details": "Medical Details",
+    "pet_vaccination_detail": "Pet Vaccination Details",
+    "vaccination_name": "Vaccination Name",
+    "vaccination_type": "Vaccination Type",
+    "vaccination_date": "Vaccination Date",
+    "next_due_date": "Next Due Date",
+    "vaccination_provider": "Vaccination Provider",
+    "vaccination_lot_no": "Vaccination Lot Number",
+    "vaccination_id": "Vaccination Certificate ID",
+    "breed_marking": "Breed & Color/Markings",
+    "emergency_info": "Emergency Contact Information",
+    "primary_doc": "Primary Veterinarian",
+    "primary_hospital": "Emergency Animal Hospital",
+    "vaccination_record": "Vaccination Records",
+    "medications": "Medications",
+    "old_illness": "Previous Illnesses/Injuries",
+    "food_allergies": "Food Allergy",
+    "medication_allergy": "Medication Allergy",
+    "chronic_conditions": "Chronic Conditions",
+    "chronic_condition": "Chronic Condition",
+    "medication": "Medication",
+    "special_diet": "Special Diet",
+    "dietary_info": "Dietary Information",
+    "dog_food": "Dog Food",
+    "feeding_schedule": "Feeding Schedule",
+    "dietary_restriction": "Dietary Restrictions",
+    "parasite_control": "Parasite Control",
+    "flea_tick_control": "Flea/Tick Control",
+    "heartworm_prevention": "Heartworm Prevention",
+    "dental_care": "Dental Care",
+    "dental_cleaning": "Dental Cleaning",
+    "dental_issues": "Dental Issues",
+    "vet_visits": "Vet Visits",
+    "last_visit": "Last Visit",
+    "reason": "Reason",
+    "behavior_training": "Behavior and Training",
+    "behavior_note": "Behavior Notes",
+    "training_progress": "Training Progress",
+    "grooming_hygiene": "Grooming and Hygiene",
+    "grooming_needs": "Grooming Needs",
+    "miscellaneous_note": "Miscellaneous Notes",
+    "miscellaneous": "Miscellaneous",
+    "pet_medication_details": "Pet Medication Details",
+    "nutrition_feeding_details": "Pet Nutrition & Feeding Details"
 }
