--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -43,7 +43,7 @@
     "lbl_parent_name": "Pet Parent Name",
     "hint_first_name": "Enter First Name",
     "hint_last_name": "Enter Last Name",
-    "lbl_parent_phone": "Pet Parent Number",
+    "lbl_parent_phone": "Mobile",
     "hint_phone": "Enter number",
     "lbl_gender": "Gender",
     "hint_gender": "Select Gender",
@@ -67,6 +67,7 @@
     "tab_appointment": "Calendar",
     "tab_pets": "My Pets",
     "location": "Location",
+    "hint_location": "Enter Location",
     "opening_time": "Opening Time",
     "btn_add_pet": "Add Pet",
     "screen_pet_details": "Pet Details",
@@ -306,5 +307,50 @@
     "miscellaneous_note": "Miscellaneous Notes",
     "miscellaneous": "Miscellaneous",
     "pet_medication_details": "Pet Medication Details",
-    "nutrition_feeding_details": "Pet Nutrition & Feeding Details"
+    "nutrition_feeding_details": "Pet Nutrition & Feeding Details",
+    "morning_feeding": "Morning Feeding",
+    "afternoon_feeding": "Afternoon Feeding",
+    "evening_feeding": "Evening Feeding",
+    "example": "Example",
+    "bedtime_snack": "Bedtime Snack (Optional)",
+    "specialization": "Specialization",
+    "lbl_veterinarian_name": "Veterinarian Name",
+    "veterinarian_special": "Veterinarian Specialist",
+    "hint_specialty": "Enter Specialist",
+    "lbl_qualification": "Qualification",
+    "hint_qualification": "Enter Qualification",
+    "lbl_profile_summary": "Profile Summary",
+    "hint_summary": "Enter Profile Summary",
+    "lbl_license_no": "License Number",
+    "hint_license_no": "Enter License Number",
+    "lbl_license_start_date": "License Start Date",
+    "lbl_license_end_date": "Expiration Date",
+    "lbl_document": "Document",
+    "hint_document": "Upload Document",
+    "lbl_experience": "Years of Experience",
+    "hint_experience": "Enter Years of Experience",
+    "lbl_language_spoken": "Languages Spoken",
+    "hint_languages": "Enter Languages Spoken",
+    "lbl_consent": "Consent & Release",
+    "hint_consent": "Enter Consent & Release",
+    "lbl_address": "Address",
+    "hint_address": "Enter Address",
+    "lbl_country": "Country",
+    "hint_country": "Enter Country",
+    "lbl_zip": "Zip Code",
+    "hint_zip_code": "Enter Zip Code",
+    "lbl_state": "State",
+    "hint_state": "Enter State",
+    "availability": "Availability",
+    "closed": "Closed",
+    "start_time": "Start Time",
+    "end_time": "End Time",
+    "remove": "Remove",
+    "monday": "Monday",
+    "tuesday": "Tuesday",
+    "wednesday": "Wednesday",
+    "thursday": "Thursday",
+    "friday": "Friday",
+    "saturday": "Saturday",
+    "sunday": "Sunday"
 }
