work on UI refactoring

--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -242,7 +242,7 @@
     "btn_book_now": "Book Now",
     "lbl_dog_name": "Dog Name",
     "hint_dog_name": "Select Dog Name",
-    "btn_confirm_booking": "Confirm Booking",
+    "btn_confirm_booking": "Confirm",
     "mark_read": "Mark all as read",
     "lbl_name": "Name",
     "hint_name": "Enter Name",
