update design section and complete design for android

--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -353,5 +353,6 @@
     "thursday": "Thursday",
     "friday": "Friday",
     "saturday": "Saturday",
-    "sunday": "Sunday"
+    "sunday": "Sunday",
+    "screen_add_special_notes": "Add Special Needs"
 }
