change UI design according to iOS

--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -64,7 +64,8 @@
     "already_account": "Already have an account?",
     "tab_home": "Home",
     "tab_profile": "Profile",
-    "tab_appointment": "Calendar",
+    "tab_appointment": "Appointment",
+    "tab_calendar": "Calendar",
     "tab_pets": "My Pets",
     "location": "Location",
     "hint_location": "Enter Location",
